# transcript-keyword-search

./: .gitignore  README.md  pyproject.toml
.github/.workflows/: ruff.yml
app/: main.py
app/demo_inputs/: example_transcripts.py  examples_transcripts.py
app/helper_functions/: keyword_search.py
