[project]
name = "transcript-keyword-search"
version = "0.1.0"
description = ""
authors = [
    {name = "Madeline Hakala"}
]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "streamlit (>=1.43.2,<2.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
