[tool.poetry]
name = "transcript-keyword-search"
version = "0.1.0"
description = ""
authors = ["Madeline Hakala"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
streamlit = "^1.43.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
